make sw.js use relative path

--- a/index.html
+++ b/index.html
@@ -117,10 +117,9 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function () {
-                navigator.serviceWorker.register('/sw.js');
+                navigator.serviceWorker.register('./sw.js');
             });
         }
-
     </script>
 
     <!-- <div class="centered" id="center_text">
